# sui-prover

./: .gitignore  CLAUDE.md  CONTRIBUTING.MD  Cargo.toml  README.MD  RoundTrip_fixed.lean  RoundTrip_temp.lean  rust-toolchain.toml  sui-prover.log.2025-07-09  sui-prover.log.2025-12-09  sui-prover.log.2026-02-25
crates/intermediate-theorem-format/: Cargo.toml
crates/intermediate-theorem-format/src/: construction.rs  lazy_builder.rs  lib.rs  utils.rs
crates/intermediate-theorem-format/src/analysis/: abort_elimination.rs  abortability.rs  bool_coercion.rs  cleanup.rs  constant_folding.rs  dead_code_removal.rs  dependency_order.rs  goal_generation.rs  guard_clause.rs  import_collection.rs  logical_simplification.rs  mod.rs  monadicity.rs  purity.rs  return_simplification.rs  runtime_variants.rs  spec_generation.rs  spec_genericize.rs  spec_type_conversion.rs  temp_inlining.rs
crates/intermediate-theorem-format/src/data/: conversion.rs  expressions.rs  functions.rs  ir.rs  mod.rs  naming.rs  statements.rs  structure.rs  types.rs  variables.rs
crates/intermediate-theorem-format/src/smt/: mod.rs  simplify.rs  translate.rs
crates/intermediate-theorem-format/src/translation/: bytecode_translator.rs  expression_translator.rs  function_translator.rs  mod.rs  pipeline.rs  program_builder.rs  statement_translator.rs
crates/lambda-boogie-handler/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.aws  build-ecr.sh  handler.rs  lambda.rs  local.sh  todo.md
crates/move-prover-lean-backend/: Cargo.toml
crates/move-prover-lean-backend/lemmas/: lemma_registry.json
crates/move-prover-lean-backend/lemmas/Arithmetic/: Universal_Arithmetic_properties.lean
crates/move-prover-lean-backend/lemmas/Basic/: Universal_Basic_properties.lean
crates/move-prover-lean-backend/lemmas/Bitwise/: Universal_Bitwise_properties.lean  uint_bitwise.lean
crates/move-prover-lean-backend/lemmas/Bool/: decide_lemmas.lean
crates/move-prover-lean-backend/lemmas/ExecutionTrace/: execution_trace_lemmas.lean  executiontrace_reasoning.lean
crates/move-prover-lean-backend/lemmas/IntegerMate/: i32_comparison.lean
crates/move-prover-lean-backend/lemmas/Monotonicity/: Universal_Monotonicity_properties.lean
crates/move-prover-lean-backend/lemmas/Prelude/: BoundedNat.lean  BoundedNatTheorems.lean  Helpers.lean  ProgramState.lean  TypeConversion.lean  UInt128.lean  UInt256.lean  Vector.lean
crates/move-prover-lean-backend/lemmas/ProgramState/: Universal_ProgramState_properties.lean  program_state_lemmas.lean  programstate_lifting.lean
crates/move-prover-lean-backend/lemmas/TickMath/: tick_sqrt_monotonicity.lean
crates/move-prover-lean-backend/lemmas/UInt128/: uint128_arithmetic.lean  uint128_comparison.lean
crates/move-prover-lean-backend/lemmas/Universal/: ExecutionTrace.lean  Helpers.lean  IntegerMate.lean  NatHelper.lean  ProgramState.lean  ToNatHelper.lean  TypeConversion.lean  UInt128.lean  UInt256.lean  Vector.lean
crates/move-prover-lean-backend/src/: backend.rs  escape.rs  generator.rs  generator_options.rs  lib.rs  main.rs  options.rs  prelude.rs
crates/move-prover-lean-backend/src/lean_backend/: bytecode_translator.rs  lean_helpers.rs  lean_wrapper.rs  mod.rs  options.rs  prover_task_runner.rs  spec_translator.rs
crates/move-prover-lean-backend/src/lemma/: cache.rs  generation.rs  mod.rs
crates/move-prover-lean-backend/src/renderer/: context.rs  expr.rs  expression_renderer.rs  function_renderer.rs  helpers.rs  ir_renderer.rs  lean_writer.rs  mod.rs  native_impls.rs  program_renderer.rs  render.rs  statement_renderer.rs  stmt.rs  struct_renderer.rs  type_renderer.rs
crates/move-prover-lean-backend/src/runtime/: lake_wrapper.rs  mod.rs
crates/stackless-to-intermediate/: Cargo.toml
crates/stackless-to-intermediate/src/: lib.rs  package_utils.rs  pipeline.rs  program_builder.rs
crates/stackless-to-intermediate/src/control_flow_reconstruction/: helpers.rs  loop_substitution.rs  mod.rs  phi_computation.rs  phi_detection.rs  reconstructor.rs  structure_discovery.rs
crates/stackless-to-intermediate/src/translation/: expression_translator.rs  function_translator.rs  ir_translator.rs  mod.rs  statement_translator.rs  utilities.rs
crates/sui-prover/: Cargo.toml
crates/sui-prover/src/: build_config.rs  build_model.rs  legacy_builder.rs  lib.rs  main.rs  package_resolution_graph.rs  prompts.rs  prove.rs  remote_config.rs  shared.rs  system_dependencies.rs
crates/sui-prover/tests/: Move.toml  integration.rs  sui-prover.sh
crates/sui-prover/tests/extra_prelude/: macro_quant.bpl
crates/sui-prover/tests/inputs/: 2.ok.move  assert.ok.move  ext_spec_only.ok.move  ignore_aborts_by_function.ok.move  ignore_aborts_by_function_bad_name.fail.move  ignore_aborts_by_function_conditional.fail.move  ignore_aborts_by_function_conditional.ok.move  ignore_aborts_by_function_no_spec.fail.move  issue-362.move  issue-loop-tail-back-jump.move  loop_invariant.move  macro_quant.move  mut_ref_enum.move  object_getter.move  recursion.fail.move  recursion.ok.move  run_on_invalid.fail.move  run_on_invalid_cloud.fail.move  run_on_local.ok.move  sum_slice.ok.move  tmp.move
crates/sui-prover/tests/snapshots/: asserts-ignore.warn.move.snap  ignore_abort-no_opaque.move.snap  ignore_abort-opaque.move.snap  ignore_aborts_by_function_bad_name.fail.move.snap  ignore_aborts_by_function_conditional.fail.move.snap  ignore_aborts_by_function_no_spec.fail.move.snap  ints.fail.move.snap  ints.fail.move.snap.new  issue-222.move.snap  issue-222.move.snap.new  issue-362.move.snap  logging.move.snap  mut_ref_enum.move.snap.new  prettyprint-enum.move.snap  prettyprint-struct.move.snap  print-ghost.move.snap  print-ghost.move.snap.new  reals.fail.move.snap  recursion.fail.move.snap  run_on_invalid.fail.move.snap  run_on_invalid_cloud.fail.move.snap  spec_no_abort_check-no_opaque.fail.move.snap  (+2 more)
(+703 files in other folders)
