[package]
name = "intermediate-theorem-format"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
move-model = { path = "../move-model" }
move-stackless-bytecode = { path = "../move-stackless-bytecode" }
move-binary-format.workspace = true
move-compiler.workspace = true
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
log.workspace = true
num.workspace = true
ethnum.workspace = true
petgraph.workspace = true
indexmap.workspace = true

[dependencies.codespan-reporting]
version = "0.11.0"

[lib]
doctest = false
