[package]
name = "lambda-boogie-handler"
authors = ["Asymptotic <info@asymptotic.tech>"]
license = "Apache-2.0"
publish = false
edition = "2021"
version = "0.0.1"

[[bin]]
name = "lambda-handler"
path = "lambda.rs"

[dependencies]
anyhow = "1.0.71"
lambda_runtime = "0.14.4"
sha2 = "0.10.9"
tokio = { version = "1.43.0", features = ["full"] }
tempfile = "3.3.0"
serde = { version = "1.0.144", features = ["derive"] }
redis = { version = "0.27", features = ["aio", "tokio-comp"] }
serde_json = "1.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.20"
