[package]
name = "move-prover-lean-backend"
version = "0.1.0"
authors = ["Diem Association <opensource@diem.com>"]
description = "Move prover Lean backend"
license = "Apache-2.0"
publish = false
edition = "2021"

[[bin]]
name = "lemma-manager"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
simplelog.workspace = true
clap.workspace = true
toml.workspace = true
async-trait.workspace = true
bimap.workspace = true
num.workspace = true
itertools.workspace = true
log.workspace = true
serde.workspace = true
anyhow.workspace = true
once_cell.workspace = true
pretty.workspace = true
regex.workspace = true
rand.workspace = true
futures.workspace = true
tera.workspace = true
tokio.workspace = true
codespan.workspace = true
codespan-reporting.workspace = true
ethnum.workspace = true

move-stackless-bytecode.workspace = true
move-command-line-common.workspace = true
move-compiler.workspace = true
move-model.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-docgen.workspace = true
intermediate-theorem-format.workspace = true
stackless-to-intermediate.workspace = true

chrono = { version = "0.4", features = ["serde"] }
serde_json = "1.0"
dirs = "5.0"
walkdir = "2.4"
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
