[package]
name = "stackless-to-intermediate"
version = "0.1.0"
edition = "2021"

[dependencies]
# Move dependencies
move-binary-format.workspace = true
move-core-types.workspace = true
move-model.workspace = true

# Local dependencies
move-stackless-bytecode = { path = "../move-stackless-bytecode" }
intermediate-theorem-format = { path = "../intermediate-theorem-format" }

# Utilities
log.workspace = true
indexmap.workspace = true
ethnum.workspace = true
toml.workspace = true