[package]
name = "stackless-to-intermediate"
version = "0.1.0"
edition = "2021"

[dependencies]
move-binary-format.workspace = true
move-model.workspace = true

# Local dependencies
move-stackless-bytecode.workspace = true
intermediate-theorem-format.workspace = true

# Utilities
log.workspace = true
toml.workspace = true
indexmap.workspace = true
ethnum.workspace = true